<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_dog"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_full"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="7"
            android:gravity="end|bottom"
            android:textColor="@color/black"
            android:textSize="25dp"
            tools:text="(35*3+5)+2+5-6+4" />

        <TextView
            android:id="@+id/text_view_equally"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="end|center"
            android:textColor="@color/black"
            android:textSize="20dp"
            tools:text="2+5-6=4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_percent1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:visibility="invisible"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_parenthesis_start1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:visibility="invisible"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_backspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_equally"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_equally"
            android:text="@string/c"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_percent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_parenthesis_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/parenthesis_start"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_parenthesis_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/parenthesis_end"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_operation"
            android:text="@string/division"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_multiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_operation"
            android:text="@string/multiplication"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_operation"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_operation"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="2.1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_basic"
            android:text="@string/point"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />

        <Button
            android:id="@+id/button_equally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/button_equally"
            android:text="@string/equally"
            android:textColor="@color/black"
            android:textSize="@dimen/button_text" />
    </LinearLayout>

</LinearLayout>


